# blog-on-flask

./: .dockerignore  .env.dev.db  .env.dev.web  .gitignore  Dockerfile  README.md  blog.py  config.py  deployment.yaml  docker-compose.development.yaml  docker-compose.production.yaml  pyproject.toml  serve_development.sh  serve_production.sh  start_development_env.sh  start_production_env.sh
app/: __init__.py  emails.py  forms.py  models.py  routes.py
app/auth/: __init__.py  emails.py  forms.py  routes.py
app/auth/templates/: login.html
app/auth/templates/email/: reset_password.html
app/errors/: handlers.py
app/errors/templates/: 404.html  500.html
app/posts/: __init__.py  forms.py  routes.py
app/posts/templates/: _post.html  base.html
app/templates/: base.html  index.html  login.html  user.html
app/templates/email/: reset_password.txt
app/users/: __init__.py  forms.py  routes.py
app/users/templates/: user.html
migrations/versions/: 3705a1211ed9_added_more_information_about_users.py  596268a2b155_created_post_table.py  cdab27b509af_created_user_table.py  ee45e129ef4a_add_followers_table.py
