[tool.poetry]
name = "twitty"
version = "0.1.0"
description = "Twitter-like blogging application"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8"
Flask = "^2.0.1"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.1"
gunicorn = "^20.1.0"
Flask-Login = "^0.5.0"
email-validator = "^1.1.3"
Flask-Mail = "^0.9.1"
PyJWT = "^2.1.0"
psycopg2-binary = "^2.9.1"
Flask-Session = "^0.4.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
